--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DISCORD_TOKEN=MTAzMTk2NzY3Mzk5NjgyNDYwNw.GaapqS.Vg6fjy_3QsFTXIXRkSMJHakN5sa2czoljfvd1U
-DISCORD_CLIENT_ID=1031967673996824607
-APTIQ_API_URL=https://aptiq-backend.onrender.com
+DISCORD_TOKEN=
+DISCORD_CLIENT_ID=
+APTIQ_API_URL=
 APTIQ_API_KEY=
-APTIQ_CHANNEL_ID=1442973829239406763
-APTIQ_BACKEND_URL_BOT=https://aptiq-discord-bot.onrender.com
-APTIQ_BOT_EMAIL=bot@aptiq.nocxai.com
-APTIQ_BOT_PASSWORD=AptiQBot123!
+APTIQ_CHANNEL_ID=
+APTIQ_BACKEND_URL_BOT=
+APTIQ_BOT_EMAIL=
+APTIQ_BOT_PASSWORD=
