--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ DISCORD_CLIENT_ID=
 APTIQ_API_URL=
 APTIQ_API_KEY=
 APTIQ_CHANNEL_ID=
-APTIQ_BACKEND_URL_BOT=
+APTIQ_BACKEND_URL=
 APTIQ_BOT_EMAIL=
 APTIQ_BOT_PASSWORD=
